# student-resume-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  agent_models.py  config.py  llm.py  prompts.py  resume.py  resume_parser.py  resume_scoring.py  schema.py  tools.py
data/: resume_example.md  resume_template.md
outputs/: optimized_resume_1.md  optimized_resume_1_20260710_002224.md  optimized_resume_1_20260710_095638.docx  optimized_resume_1_20260710_095638.md  optimized_resume_1_20260710_101809.docx  optimized_resume_1_20260710_101809.md  optimized_resume_1_20260711_171810.md  optimized_student_resume_20260710_090122.md  resume_20260709_134242.md  resume_20260709_134559.md  resume_20260709_152619.md  resume_20260709_162404.md  resume_20260709_171749.md  resume_20260709_172548.md  resume_20260709_180818.md  resume_20260709_182109.md  resume_20260709_204226.md  resume_20260709_204332.md  resume_20260709_204428.md  resume_20260709_210149.md  resume_20260709_214248.md  resume_20260709_223512.md  resume_20260709_233151.docx  resume_20260710_085947.docx  resume_20260710_085947.md  resume_20260710_090530.md  resume_20260710_094337.md  resume_20260710_094626.docx  resume_20260710_094626.md  resume_20260710_095449.md  resume_20260710_101614.md  resume_20260711_153501.md  resume_20260711_162347.md  resume_20260711_172308.docx  resume_20260711_172308.md  resume_20260711_173037.docx  resume_20260711_173037.md  resume_20260711_180230.md  resume_case_1.md  resume_case_2.md  (+1 more)
scripts/: check_agent_driver.py  (+3 more)
(+28 files in other folders)
