[build-system]
requires = ["setuptools>=68,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "student-resume-agent"
version = "1.0.0"
description = "基于 LangChain 和 Streamlit 的学生简历生成智能体"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["outputs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
